Added Better usablilty and examples.

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -5,6 +5,13 @@ body html {
     margin: 0;
 }
 
+.full {
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
 .menu {
 
 }
@@ -16,3 +23,26 @@ body html {
 .menu_logo img {
     width:160px !important;
 }
+
+.center{
+    text-align: center;
+
+}
+
+.header{
+    font-size: 10em;
+}
+
+.gradient {
+
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    height: 1000px;
+    z-index: -1;
+    background: #5e6a71; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(bottom, rgba(255, 255, 255, 0) 12%, rgba(94, 106, 113, 1) 90%); /*Safari 5.1-6*/
+    background: -o-linear-gradient( bottom, rgba(255, 255, 255, 0) 12%, rgba(94, 106, 113, 1) 90%); /*Opera 11.1-12*/
+    background: -moz-linear-gradient( bottom, rgba(255, 255, 255, 0) 12%, rgba(94, 106, 113, 1) 90%); /*Fx 3.6-15*/
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 12%, rgba(94, 106, 113, 1) 90%); /*Standard*/
+  }
