--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,3 +1,5 @@
+@import "navbar.less";
+
 body html {
     padding: 0;
     height: 100%;
@@ -12,10 +14,6 @@ body html {
     margin: 0;
 }
 
-.menu {
-
-}
-
 .menu_logo {
     padding: 0 ;
 }
@@ -26,7 +24,6 @@ body html {
 
 .center{
     text-align: center;
-
 }
 
 .header{
@@ -34,7 +31,6 @@ body html {
 }
 
 .gradient {
-
     position: absolute;
     width: 100%;
     bottom: 0px;
@@ -45,4 +41,5 @@ body html {
     background: -o-linear-gradient( bottom, rgba(255, 255, 255, 0) 12%, rgba(94, 106, 113, 1) 90%); /*Opera 11.1-12*/
     background: -moz-linear-gradient( bottom, rgba(255, 255, 255, 0) 12%, rgba(94, 106, 113, 1) 90%); /*Fx 3.6-15*/
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 12%, rgba(94, 106, 113, 1) 90%); /*Standard*/
-  }
+}
+
