--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -17,14 +17,16 @@
 }
 
 .navbar {
-  width: 100%;
-  height: 6.5em;
+  height: 6.5em !important;
 }
 
 .navbar-menu {
   height: 6.5em !important;
+  width: 100%;
+  position: fixed !important;
   box-shadow: unset !important;
   border: unset !important;
+  z-index: 3;
 }
 
 .nav-button {
