--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -14,6 +14,12 @@ body html {
     margin: 0;
 }
 
+.footer {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
 .menu_logo {
     padding: 0 ;
 }
